# pixi_ur_ros2

./: .gitignore  README.md  example.py  pixi.toml
scripts/: set_ros_env.sh
src/crisp_ur_bringup/: package.xml  setup.cfg  setup.py
src/crisp_ur_bringup/config/: ur_controllers.yaml
src/crisp_ur_bringup/crisp_ur_bringup/: wrench_republisher.py
src/crisp_ur_bringup/launch/: ur.launch.py
