<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crisp_ur_bringup</name>
  <version>0.0.1</version>
  <description>CRISP Controllers bringup for Universal Robots</description>
  <maintainer email="kozlov.l.a10@gmail.com">Lev Kozlov</maintainer>
  <license>Apache-2.0</license>

  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>ur_robot_driver</depend>
  <depend>ur_description</depend>
  <depend>crisp_controllers</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
